# src/api/openapi_spec.yaml
@@ -41,13 +41,20 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                  data:
-                    type: string
-                    description: "Base64 encoded PNG image with the longest side resized to 800px, prefixed with 'data:image/png;base64,'"
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                      example: "natal_chart.png"
+                    mime_type:
+                      type: string
+                      example: "image/png"
+                    content:
+                      type: string
+                      description: "Base64 encoded PNG image"
+                      example: "iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg=="
         '401':
           description: Unauthorized
         '500':
